# air-quality-alarmer

./: .gitignore  CMakeLists.txt  readme.md  sdkconfig
.github/workflows/: build.yml
case/: esp32.FCStd
components/: config.html
main/: CMakeLists.txt
main/inc/: creds.h  display.h  main.h  measurment.h  u8g2_esp32_hal.h  wifi.h
main/src/: aht21.c  bmp280.c  creds.c  display.c  ens160.c  http_handler_root.c  http_handler_save.c  http_update_firmware.c  main.c  measurment.c  web.c  wifi.c
